--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,9 +12,12 @@
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
-      android:theme="@style/AppTheme"
+      android:theme="@style/LaunchTheme"
       android:usesCleartextTraffic="true" >
       
+      
+        
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -26,6 +29,7 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+         
       </activity>
        <meta-data  
      android:name="com.google.android.geo.API_KEY"
