--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,9 +1,15 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '10.0'
+
+platform :ios, '13.0'
 
 target 'Aminah' do
+  # React Native Maps dependencies
+rn_maps_path = '../node_modules/react-native-maps'
+pod 'react-native-google-maps', :path => rn_maps_path
+pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   config = use_native_modules!
 
   use_react_native!(
@@ -23,6 +29,7 @@ target 'Aminah' do
   # you should disable the next line.
   use_flipper!()
 
+  
   post_install do |installer|
     react_native_post_install(installer)
   end
