--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "react-native-gifted-chat": "^1.0.4",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-maps": "^1.2.0",
+    "react-native-maps": "^1.3.1",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-mask-input": "^1.2.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-ratings": "^8.1.0",
@@ -47,6 +48,7 @@
     "react-native-screens": "^3.10.2",
     "react-native-share": "^7.3.5",
     "react-native-sms-verifycode": "^2.4.3",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
