--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-circular-progress-indicator": "^4.2.0",
     "react-native-countdown-circle-timer": "^3.0.9",
+    "react-native-date-picker": "^4.2.5",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-elements": "^3.4.2",
     "react-native-geolocation-service": "^5.3.0-beta.4",
