Amina-3tt-app084084  commit

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "native-base": "^3.4.3",
+    "pubnub": "^7.2.0",
+    "pubnub-react": "^3.0.1",
     "react": "17.0.1",
     "react-countdown-hook": "^1.1.1",
     "react-credit-cards": "^0.8.3",
@@ -29,6 +31,7 @@
     "react-native-circular-progress-indicator": "^4.2.0",
     "react-native-countdown-circle-timer": "^3.0.9",
     "react-native-date-picker": "^4.2.5",
+    "react-native-device-info": "^10.2.0",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-elements": "^3.4.2",
     "react-native-geolocation-service": "^5.3.0-beta.4",
