--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@gorhom/bottom-sheet": "^4.4.3",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-native-community/netinfo": "^9.3.4",
     "@react-navigation/bottom-tabs": "^6.1.0",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.25.0",
+    "geolib": "^3.3.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "native-base": "^3.4.3",
@@ -31,7 +33,7 @@
     "react-native-circular-progress-indicator": "^4.2.0",
     "react-native-countdown-circle-timer": "^3.0.9",
     "react-native-date-picker": "^4.2.5",
-    "react-native-device-info": "^10.2.0",
+    "react-native-device-info": "^10.2.1",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-elements": "^3.4.2",
     "react-native-geolocation-service": "^5.3.0-beta.4",
@@ -52,6 +54,7 @@
     "react-native-screens": "^3.10.2",
     "react-native-share": "^7.3.5",
     "react-native-sms-verifycode": "^2.4.3",
+    "react-native-sound": "^0.11.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
     "react-native-swipe-list-view": "^3.2.9",
