--- a/ios/Aminah/Info.plist
+++ b/ios/Aminah/Info.plist
@@ -39,6 +39,8 @@
 	<string>location is required for provide reservation benefits for you</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>location is required for provide reservation benefits for you</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This is needed to get location updates in the background and get benefits for serve you</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Cairo-Black.ttf</string>
@@ -72,7 +74,7 @@
 		<string>location</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>LaunchScreen.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
