--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react": "17.0.1",
     "react-countdown-hook": "^1.1.1",
     "react-credit-cards": "^0.8.3",
-    "react-native": "0.64.3",
+    "react-native": "0.64.4",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-circular-progress-indicator": "^4.2.0",
     "react-native-countdown-circle-timer": "^3.0.9",
@@ -44,6 +44,7 @@
     "react-native-maps": "^1.3.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-mask-input": "^1.2.1",
+    "react-native-open-maps": "^0.4.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-ratings": "^8.1.0",
@@ -51,7 +52,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "^3.10.2",
+    "react-native-screens": "^3.18.2",
     "react-native-share": "^7.3.5",
     "react-native-sms-verifycode": "^2.4.3",
     "react-native-sound": "^0.11.2",
@@ -60,7 +61,10 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-webview": "^11.23.0",
+    "react-native-webview": "^11.25.0",
+    "react-native-xml2js": "^1.0.3",
+    "react-xml-parser": "^1.1.8",
+    "rn-telr-sdk": "^1.0.9",
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
