--- a/ios/Aminah/Info.plist
+++ b/ios/Aminah/Info.plist
@@ -88,6 +88,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+    <string>Enable Aminah app  access to your camera to upload profile image</string>
+	
+	<key>NSUserTrackingUsageDescription</key>
+    <string>This app uses device identifiers to track marketing attribution and app usage.  Your data is kept confidential and is not shared with any 3rd parties or advertising partners.</string>
+	
+	
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
