--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,11 +14,17 @@ pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-
 permissions_path = '../node_modules/react-native-permissions/ios'
 
 pod 'Permission-Notifications', :path => "#{permissions_path}/Notifications"
-
+ # add next line
+ pod 'Permission-AppTrackingTransparency', :path => "#{permissions_path}/AppTrackingTransparency"
+   
 pod 'Firebase', :modular_headers => true
 pod 'FirebaseCoreInternal', :modular_headers => true
 pod 'GoogleUtilities', :modular_headers => true
 pod 'FirebaseCore', :modular_headers => true
+
+pod 'react-native-appsflyer',
+:path => '../node_modules/react-native-appsflyer'
+
 
   config = use_native_modules!
 
@@ -46,29 +52,28 @@ pod 'FirebaseCore', :modular_headers => true
       # Run the React-Native post install
            
           # Get the development team id from the main project
-          dev_team_id = ""
-          project = installer.aggregate_targets[0].user_project
-          project.targets.each do |target|
-            target.build_configurations.each do |config|
-              if dev_team_id.empty? and !config.build_settings['DEVELOPMENT_TEAM'].nil?
-                dev_team_id = config.build_settings['DEVELOPMENT_TEAM']
+          # dev_team_id = ""
+          # project = installer.aggregate_targets[0].user_project
+          # project.targets.each do |target|
+          #   target.build_configurations.each do |config|
+          #     if dev_team_id.empty? and !config.build_settings['DEVELOPMENT_TEAM'].nil?
+          #       dev_team_id = config.build_settings['DEVELOPMENT_TEAM']
+          #     end
+          #   end
+          # end
+
+            # Reconfigure the pods, update deployment target and signing settings
+            installer.pods_project.targets.each do |target|
+              target.build_configurations.each do |config|
+                if target.respond_to?(:product_type) and target.product_type == 'com.apple.product-type.bundle'
+                  config.build_settings['CODE_SIGNING_ALLOWED'] = 'NO'
+                end if
+                
+  
+                config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
               end
             end
-          end
-
-          # Reconfigure the pods, update deployment target and signing settings
-          installer.pods_project.targets.each do |target|
-            target.build_configurations.each do |config|
-              if target.respond_to?(:product_type) and target.product_type == 'com.apple.product-type.bundle'
-                config.build_settings['DEVELOPMENT_TEAM'] = dev_team_id
-                config.build_settings['CODE_SIGN_IDENTITY'] = 'Apple Distribution';
-                config.build_settings['CODE_SIGN_STYLE'] = 'Manual';
-              end if
-
-              config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
-            end
-          end
-    ########
+      ########
   end
 
 end
