--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "react-native": "0.64.4",
     "react-native-animated-loader": "^1.0.0",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-appsflyer": "^6.12.2",
     "react-native-autocomplete-dropdown": "^3.0.2",
     "react-native-awesome-card-io": "^0.9.1",
     "react-native-background-actions": "3.0.0",
     "react-native-background-timer": "2.4.1",
+    "react-native-calendars": "^1.1301.0",
     "react-native-checkout": "^0.0.8",
     "react-native-circular-progress-indicator": "^4.2.0",
     "react-native-code-push": "7.0.4",
@@ -52,10 +54,13 @@
     "react-native-device-info": "^10.2.1",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-elements": "^3.4.2",
+    "react-native-fast-image": "^8.6.3",
     "react-native-form-component": "^2.6.8",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-gifted-chat": "^1.0.4",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-image-slider-with-text": "^1.0.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^1.3.1",
