--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.1.6",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-webview": "^11.25.0",
     "react-native-xml2js": "^1.0.3",
