--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,6 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
-
+# require_relative '../node_modules/react-native-permissions/scripts/setup'
 
 platform :ios, '13.0'
 
@@ -13,10 +13,11 @@ pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-
 #React native Permisions 
 permissions_path = '../node_modules/react-native-permissions/ios'
 
+
 pod 'Permission-Notifications', :path => "#{permissions_path}/Notifications"
  # add next line
  pod 'Permission-AppTrackingTransparency', :path => "#{permissions_path}/AppTrackingTransparency"
-   
+ 
 pod 'Firebase', :modular_headers => true
 pod 'FirebaseCoreInternal', :modular_headers => true
 pod 'GoogleUtilities', :modular_headers => true
